# goit-pythonweb-hw-12

./: .coverage  .gitignore  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
migration/versions/: f4100c881680_init.py
src/: .env  example.env
src/conf/: config.py  constants.py
src/core/: depend_service.py  security.py
src/entity/: models.py
src/repository/: base.py  contacts_book.py  refresh_token_repository.py  user_repository.py
src/routes/: auth.py  contacts_book.py  users.py
src/schemas/: contact_book.py  user.py
src/services/: auth.py  contacts_book.py  email.py  user.py
src/services/templates/: password_reset.html
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py
tests/repositories/: test_contacts_book_repository.py  test_refresh_token_repository.py  test_user_repository.py
