[tool.poetry]
name = "mcs01-08"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
pydantic-settings = "^2.8.1"
greenlet = "^3.1.1"
cloudinary = "^1.43.0"
slowapi = "^0.1.9"
apscheduler = "^3.11.0"
jwt = "^1.3.1"
bcrypt = "^4.3.0"
redis = "^5.2.1"
passlib = "^1.7.4"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.2"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"
pytest-cov = "^6.0.0"
sphinx = "^8.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules -W ignore::DeprecationWarning -W ignore::UserWarning"
testpaths = ["tests"]
pythonpath = "."
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
asyncio_default_fixture_loop_scope = "function"
